# admin-go-api/api/controller/sysAdmin.go
@@ -13,8 +13,7 @@ import (
 // @Description 用户登录接口
 // @Param data body entity.LoginDto true "data"
 // @Success 200 {object} result.Result
-// @router /api/login [post]
-
+// @Router /api/login [post]
 func Login(c *gin.Context) {
 	var dto entity.LoginDto
 	_ = c.ShouldBind(&dto)
